Skip Navigation: Move the link higher to avoid showing it on mobile devices.

--- a/scss/sections/_navbar.scss
+++ b/scss/sections/_navbar.scss
@@ -29,7 +29,7 @@
   padding: 0.5rem 1.5rem;
   position: absolute;
   border: 1px solid var(--colors-text-default);
-  transform: translateY(-120%) translateX(15%);
+  transform: translateY(-620%) translateX(15%);
   text-decoration: none;
   z-index: 2000;
 
